apps/sonarr/components/tailscale/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: shikanime
  annotations:
    tailscale.com/tags: tag:web
  labels:
    tailscale.com/proxy-class: nishir-sonarr
spec:
  ingressClassName: tailscale
